--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "axios": "^1.3.0",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
   }
 }
